Version 1.1.0
    - Renamed the existing example application to be a "grass and
      rivers" example application. This paves the way for future example
      applications to be created.
    - Added ability to arbitrarily restrict the size and shape of maps
      using a map tile location filter.
    - Added ability to arbitrarily specify how map tile edges match with
      other map tile edges.
    - Added example application for creating a dungeon map.
    - Added ability to arbitrarily specify open edges for map tiles.
    - Removed ability to add null map tiles to the map.
    - Added ability to remove map tiles from the map.
    - Added logic to deal with situations where it is impossible to
      place a map tile in a certain location in the map because no map
      tile type in any orientation can fit in that location. When this
      situation occurs, map tiles are removed from the map in the order
      in which they were added until the situation is resolved.

Version 1.0.0
    - Initial FlexGen release.