@@ -43,6 +43,7 @@ import org.flexgen.map.MapTileLocation;
 import org.flexgen.map.MapTileOrientation;
 import org.flexgen.map.MapTileType;
 import org.flexgen.map.RectangularMapTileLocationFilter;
+import org.flexgen.map.test.support.TestBeforeMapTileAddedListener;
 import org.flexgen.map.test.support.TestMapTileAddedListener;
 import org.flexgen.map.test.support.TestMapTileRemovedListener;
 import org.flexgen.test.helper.GeneralHelper;
@@ -637,6 +638,52 @@ public class MapGeneratorTest
 
         Assert.assertEquals( "Unexpected map tile.", mapTile,
                              mapGenerator.getMapTile( mapTileLocation ));
+    }
+
+    /**
+     * Verify that the addMapTile() method works correctly when a "before map tile added" listener
+     * has been added to the map generator.
+     */
+    @Test
+    public void addMapTile_beforeMapTileAddedListener()
+    {
+        MapTileType mapTileType = MapTileTypeHelper.build();
+        MapTileOrientation mapTileOrientation = MapTileOrientationHelper.getRandomOrientation();
+        MapTile mapTile = new MapTile( mapTileType, mapTileOrientation );
+
+        MapTileLocation mapTileLocation = MapTileLocationHelper.build();
+
+        MapTileType[] mapTileTypes = new MapTileType[]
+        {
+            mapTileType
+        };
+
+        MapGenerator mapGenerator = new MapGenerator(
+                new ImprovedRandom(), mapTileTypes,
+                new RectangularMapTileLocationFilter(
+                        mapTileLocation.getX(), mapTileLocation.getY(),
+                        mapTileLocation.getX(), mapTileLocation.getY() ));
+
+        TestBeforeMapTileAddedListener beforeMapTileAddedListener =
+                new TestBeforeMapTileAddedListener();
+        mapGenerator.addBeforeMapTileAddedListener( beforeMapTileAddedListener );
+        mapGenerator.addMapTile( mapTileLocation, mapTile );
+
+        List< MapTileLocation > mapTileLocations = beforeMapTileAddedListener.getMapTileLocations();
+
+        Assert.assertEquals( "Unexpected number of map tile locations.", 1,
+                             mapTileLocations.size() );
+
+        Assert.assertEquals( "Unexpected map tile location.", mapTileLocation,
+                             mapTileLocations.get( 0 ));
+
+        List< MapGenerator > mapGenerators = beforeMapTileAddedListener.getMapGenerators();
+
+        Assert.assertEquals( "Unexpected number of map generators.", 1,
+                             mapGenerators.size() );
+
+        Assert.assertEquals( "Unexpected map generator.", mapGenerator,
+                             mapGenerators.get( 0 ));
     }
 
     /**
